[Qt] ASSERT(m_useFixedLayout) in WebPage when using QRawWebView without setting fixed layout https://bugs.webkit.org/show_bug.cgi?id=95557

Reviewed by Noam Rosenthal.

Let QRawWebView work with non-fixed layout size.

* UIProcess/API/qt/raw/qrawwebview.cpp:
(QRawWebView::setSize): Also put the member assigment into
the point where the new size is ensured to be committed.

Canonical link: https://commits.webkit.org/113439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127275 268f45cc-cd09-0410-ab3c-d52691b4dbfc